# pori-viikkokisa-rankings

./: .gitignore  README.md  cli.py  deploy_s3.py  generate_site.py  pyproject.toml  tspool_scraper.py
.github/workflows/: weekly.yml
