[project]
name = "tspool-rankings"
version = "0.1.0"
description = "Scrape TS-Pool competition results and generate a static rankings site"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
]

[project.scripts]
pori = "cli:main"
pori-scrape = "tspool_scraper:main"
pori-site = "generate_site:main"
pori-deploy = "deploy_s3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
